# ms-tpm-20-ref

Samples/Nucleo-TPM/L476RG/: .cproject  .mxproject  .project  Nucleo-L476RG Debug.launch  Nucleo-L476RG.ioc  STM32L476RG_FLASH.ld  mx.scratch
Samples/Nucleo-TPM/L476RG/Inc/: cdc_data.h  circular_buffer.h  main.h  spi_utils.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Samples/Nucleo-TPM/L476RG/Src/: cdc_data.c  circular_buffer.c  main.c  spi_utils.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
Samples/Nucleo-TPM/L4A6RG/: .cproject  .project
Samples/Nucleo-TPM/Shared/TPMDevice/include/: TpmDevice.h  user_settings.h
Samples/Nucleo-TPM/Shared/TPMDevice/src/: StmUtil.c  TpmDevice.c
Samples/Nucleo-TPM/scripts/: README.md  lpntpn_cmd  pytss_startup.py  simulator
Samples/Nucleo-TPM/scripts/communication/utils/: lpntpn_cmd  tpm2-pytss_example
Samples/Nucleo-TPM/scripts/communication/utils/tpm2-tts_example/: main.c
Samples/Nucleo-TPM/scripts/kfunc_tracer/: .gitignore  get_call_stack.py  pull_logs.sh
Samples/Nucleo-TPM/scripts/tpm2-tts_example/: Makefile
Samples/Nucleo-TPM/scripts/utils/: SerialEmulator.py  utils.py
TPMCmd/tpm/include/: GpMacros.h  Implementation.h
TPMCmd/tpm/src/crypt/: AlgorithmTests.c  CryptEccMain.c  CryptSelfTest.c
TPMCmd/tpm/src/subsystem/: CommandAudit.c  PP.c
TPMCmd/tpm/src/support/: AlgorithmCap.c
zephyr/: CMakeLists.txt  Kconfig
zephyr/platform/: CMakeLists.txt
zephyr/platform/include/: PlatformData.h  Platform_fp.h
